<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.example.testapp"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_1"
                android:layout_column="0"
                android:layout_weight="0.5"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/button_1" />

            <Button
                android:id="@+id/button_2"
                android:layout_column="1"
                android:layout_weight="0.5"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/button_2" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_3"
                android:layout_weight="0.5"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/button_3" />

            <Button
                android:id="@+id/button_4"
                android:layout_weight="0.5"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/button_4" />
        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/imageView_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TableLayout1"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/imageView_description"
        android:padding="10dp"
        android:src="@drawable/sap" />

</RelativeLayout>